--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
        <!-- QUESTIONS TO BE DISPLAYED -->
 
        <div class="questions-list">
-         <ul>
-          
+         <ul id = "questions-display">          
          </ul>
        </div>
        
