added search results

--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
        <!-- QUESTIONS TO BE DISPLAYED -->
 
        <div class="questions-list">
-         <ul id = "questions-display">          
+         <ul id="questions-display" class = "questDisplay">          
          </ul>
        </div>
+
+       <div class="search-display">
+        <ul class="questDisplay">          
+        </ul>
+      </div>
+
        
 
        
