stackoverflow to aether

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div id="header" class="header">
 
-     <h1 id="title"> Fake Stack Overflow</h1>
+     <h1 id="title"> AEtherX </h1>
 
    <div class="search-box">
       <form class="search-form">
